updated sbt, moved config around to fix dist