@@ -6,8 +6,6 @@ set JAVA=%JAVA_HOME%\bin\java
 set LATEST=http://www.sciabarra.com/agilesites/
 set LAUNCHER=%BASE%\project\sbt-launch.jar
 set JOPTS=
-REM set JOPTS=%JOPTS% -XX:MaxPermSize=256M
-set JOPTS=%JOPTS% -Dlogback.debug=true
 if exist setenv.bat call setenv.bat
 if exist mysetenv.bat call mysetenv.bat
 set SBT=-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -Dsbt.boot.directory=%BOOT% -Dsbt.ivy.home=%REPO% -Dagilesites.latest=%LATEST% %JOPTS% -jar %LAUNCHER% 
