@@ -1,5 +1,4 @@
 #!/bin/bash
-set -x
 cd "$(dirname $0)"
 BASE="$(pwd)"
 REPO="$BASE/project/repo"
@@ -8,8 +7,6 @@ JAVA="$JAVA_HOME/bin/java"
 LATEST=http://www.sciabarra.com/agilesites/
 LAUNCHER="$BASE/project/sbt-launch.jar"
 JOPTS=
-#JOPTS=-XX:MaxPermSize=256M
-JOPTS="$JOPTS -Dlogback.debug=true"
 test -e setenv.sh && source setenv.sh
 test -e mysetenv.sh && source mysetenv.sh
 SBT="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -Dsbt.boot.directory=$BOOT -Dsbt.ivy.home=$REPO -Dagilesites.latest=$LATEST $JOPTS -jar $LAUNCHER"
